--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Arrhythmia_Dataset/* filter=lfs diff=lfs merge=lfs -text
 Heartbeat_Dataset/* filter=lfs diff=lfs merge=lfs -text
+augmented_data/* filter=lfs diff=lfs merge=lfs -text
